# mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  ai_service.py  design_note.ipynb  main.py  model_deployment.py  preprocessor.py  pyproject.toml  requirements.txt  schema.py
app/: ai_service.py  preprocessor.py
