[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "fastapi>=0.136.0",
    "huggingface-hub>=1.11.0",
    "pydantic>=2.13.1",
    "ray[serve]>=2.55.0",
    "transformers>=5.5.4",
]
